# bap1b-public

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
bap1b/: figures.py
data/: megamastersheet_simulated.xlsx
scripts/: 00_randomize_data.py  01_cs_summary.R  02_data_summary.r  03_cs_a.r  04_cs_b.r  05_long_c.R  05b_long_c.R  05c_long_c.R  06_long_de.R  07_long_fg.R  08_tab_summary.py  09_tab_cs_summary.py  10_tab_cs_a.py  11_tab_cs-b.py  12_tab_long_c.py  12b_tab_long_c.py  12c_tab_long_c.py  13_tab_long_defg.py  14_correlation_plot.py  15_vis_cs-a.py  16_vis_cs-b.py  17_vis_cs.py  18_vis_long_c.py  18b_vis_long_c.py  19_vis_long_defg.py  20_convergent_validity.py  add_hippocampus_to_mastersheet.py
